[gd_scene load_steps=34 format=3 uid="uid://b07sdwdmbai0f"]

[ext_resource type="Script" path="res://combat/hitbox_component.gd" id="1_eq3x5"]
[ext_resource type="Script" path="res://combat/projectile.gd" id="1_k8ttn"]
[ext_resource type="PackedScene" uid="uid://bmqxntns8k615" path="res://movement/velocity_component.tscn" id="2_mawv0"]
[ext_resource type="Texture2D" uid="uid://tlivnrpdkdi8" path="res://assets/Projectile.png" id="4_orfa2"]
[ext_resource type="PackedScene" uid="uid://dp2d5yhhoypry" path="res://components/random_stream_player.tscn" id="5_qa1m2"]
[ext_resource type="AudioStream" uid="uid://c0xm7ghu5vwi7" path="res://assets/sfx/322171__liamg_sfx__axe-impact-gore.wav" id="6_6gxxe"]
[ext_resource type="AudioStream" uid="uid://bohf75xr5xapc" path="res://assets/sfx/546824__eminyildirim__fire-magic-whoosh.wav" id="7_36q7l"]
[ext_resource type="AudioStream" uid="uid://3tsfsh1kaimt" path="res://assets/sfx/impact/Impact 1.ogg" id="8_1ej70"]
[ext_resource type="AudioStream" uid="uid://ddjkgvufc3dkc" path="res://assets/sfx/impact/Impact 2.ogg" id="9_xwsbp"]
[ext_resource type="AudioStream" uid="uid://cnfa47ja1qu3p" path="res://assets/sfx/impact/Impact 3.ogg" id="10_2c2so"]
[ext_resource type="AudioStream" uid="uid://diug7lifwfx40" path="res://assets/sfx/impact/Impact 4.ogg" id="11_xpnet"]
[ext_resource type="AudioStream" uid="uid://coah85l7j8a3g" path="res://assets/sfx/impact/Impact 5.ogg" id="12_pjs27"]
[ext_resource type="AudioStream" uid="uid://b820ktmaa1vv1" path="res://assets/sfx/impact/Impact 6.ogg" id="13_fxj0e"]
[ext_resource type="AudioStream" uid="uid://cch8nphngprtg" path="res://assets/sfx/impact/Impact 7.ogg" id="14_qgy8a"]
[ext_resource type="PackedScene" uid="uid://dava0f4b01tnj" path="res://components/delete_on_wave_complete.tscn" id="15_x33rp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ic065"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r1p78"]
radius = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rsh2g"]
atlas = ExtResource("4_orfa2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlekb"]
atlas = ExtResource("4_orfa2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqpgo"]
atlas = ExtResource("4_orfa2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_164np"]
atlas = ExtResource("4_orfa2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_77lbv"]
atlas = ExtResource("4_orfa2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_53jbl"]
atlas = ExtResource("4_orfa2")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_en25x"]
atlas = ExtResource("4_orfa2")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_drnx0"]
atlas = ExtResource("4_orfa2")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou4ht"]
atlas = ExtResource("4_orfa2")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_co1ns"]
atlas = ExtResource("4_orfa2")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v64s"]
atlas = ExtResource("4_orfa2")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dnvk"]
atlas = ExtResource("4_orfa2")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_shcct"]
atlas = ExtResource("4_orfa2")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys4lg"]
atlas = ExtResource("4_orfa2")
region = Rect2(208, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_11cbt"]
atlas = ExtResource("4_orfa2")
region = Rect2(224, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cbxdm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsh2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlekb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqpgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_164np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77lbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53jbl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_en25x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drnx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou4ht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co1ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v64s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dnvk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shcct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys4lg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11cbt")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="Projectile" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_k8ttn")

[node name="VelocityComponent" parent="." instance=ExtResource("2_mawv0")]
max_speed = 500
acceleration = 50.0

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 17
script = ExtResource("1_eq3x5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_ic065")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r1p78")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-11, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_cbxdm")
autoplay = "default"
frame_progress = 0.414316

[node name="DeleteTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ImpactStreamPlayer" parent="." instance=ExtResource("5_qa1m2")]
bus = &"sfx"
streams = Array[AudioStream]([ExtResource("6_6gxxe")])

[node name="ShootStreamPlayer" parent="." instance=ExtResource("5_qa1m2")]
bus = &"sfx"
streams = Array[AudioStream]([ExtResource("7_36q7l")])

[node name="EnvironmentImpactPlayer" parent="." instance=ExtResource("5_qa1m2")]
bus = &"sfx"
streams = Array[AudioStream]([ExtResource("8_1ej70"), ExtResource("9_xwsbp"), ExtResource("10_2c2so"), ExtResource("11_xpnet"), ExtResource("12_pjs27"), ExtResource("13_fxj0e"), ExtResource("14_qgy8a")])

[node name="DeleteOnWaveComplete" parent="." instance=ExtResource("15_x33rp")]
